--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
 		"react-router-dom": "^6.4.4",
+		"react-select": "^5.8.0",
 		"react-toastify": "^9.1.1",
 		"react-use": "^17.4.0"
 	},
