--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"react-router-dom": "^6.4.4",
 		"react-select": "^5.8.0",
 		"react-toastify": "^9.1.1",
-		"react-use": "^17.4.0"
+		"react-use": "^17.4.0",
+		"usehooks-ts": "^2.9.1"
 	},
 	"homepage": "./",
 	"main": "public/electron.js",
