--- a/package.json
+++ b/package.json
@@ -19,18 +19,27 @@
 		"wait-on": "^6.0.1"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
 		"auto-launch": "^5.0.5",
 		"electron-is-dev": "^2.0.0",
 		"electron-reloader": "^1.2.3",
 		"electron-updater": "^5.3.0",
+		"i18next": "^23.7.6",
+		"i18next-browser-languagedetector": "^7.2.0",
+		"i18next-http-backend": "^2.4.1",
 		"node-addon-api": "^7.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^13.5.0",
 		"react-icons": "^4.7.1",
+		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.4.4",
 		"react-select": "^5.8.0",
 		"react-toastify": "^9.1.1",
 		"react-use": "^17.4.0",
+		"redux": "^4.2.1",
+		"redux-thunk": "^2.4.2",
+		"translation-check": "^1.1.0",
 		"usehooks-ts": "^2.9.1"
 	},
 	"homepage": "./",
