--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"redux": "^4.2.1",
 		"redux-thunk": "^2.4.2",
 		"translation-check": "^1.1.0",
+		"use-debounce": "^10.0.0",
 		"usehooks-ts": "^2.9.1",
 		"wavesurfer.js": "^7.4.12"
 	},
