alerts changed on dialog boxes

--- a/sound-shaper/package.json
+++ b/sound-shaper/package.json
@@ -24,6 +24,7 @@
 		"electron-is-dev": "^2.0.0",
 		"electron-reloader": "^1.2.3",
 		"electron-updater": "^5.3.0",
+		"framer-motion": "^10.16.16",
 		"i18next": "^23.7.6",
 		"i18next-browser-languagedetector": "^7.2.0",
 		"i18next-http-backend": "^2.4.1",
@@ -42,16 +43,16 @@
 	"homepage": "./",
 	"main": "public/electron.js",
 	"scripts": {
-		"dev": "concurrently \"npm run react:dev\" \"npm run electron:wait\"",
-		"electron:wait": "wait-on tcp:3000 && npm run electron:dev",
+		"dev": "concurrently \"yarn react:dev\" \"yarn electron:wait\"",
+		"electron:wait": "wait-on tcp:3000 && yarn electron:dev",
 		"prebuild": "rimraf build && rimraf dist",
 		"react:build": "react-scripts build",
 		"react:dev": "cross-env BROWSER=none react-scripts start",
 		"electron:build": "electron-builder build --win --publish never",
 		"electron:deploy": "electron-builder build --win --publish always",
 		"electron:dev": "electron .",
-		"build": "npm run react:build && npm run electron:build",
-		"deploy": "npm run react:build && npm run electron:deploy",
+		"build": "yarn react:build && yarn electron:build",
+		"deploy": "yarn react:build && yarn electron:deploy",
 		"format": "prettier --write .",
 		"update": "taze latest -w",
 		"extract-translations": "i18next -c i18next-parser.config.js",
