--- a/sound-shaper/package.json
+++ b/sound-shaper/package.json
@@ -1,78 +1,85 @@
 {
-	"name": "sound-shaper",
-	"version": "1.0.1",
-	"private": true,
-	"devDependencies": {
-		"autoprefixer": "^10.4.13",
-		"concurrently": "^8.0.1",
-		"cross-env": "^7.0.3",
-		"electron": "^22.0.0",
-		"electron-builder": "^23.6.0",
-		"i18next-parser": "^8.9.0",
-		"postcss": "^8.4.19",
-		"prettier": "^2.8.0",
-		"react-scripts": "^5.0.1",
-		"rimraf": "^3.0.2",
-		"tailwindcss": "3.2.4",
-		"taze": "^0.8.4",
-		"typescript": "^4.9.3",
-		"wait-on": "^6.0.1"
-	},
-	"dependencies": {
-		"@reduxjs/toolkit": "^1.9.7",
-		"auto-launch": "^5.0.5",
-		"electron-is-dev": "^2.0.0",
-		"electron-reloader": "^1.2.3",
-		"electron-updater": "^5.3.0",
-		"framer-motion": "^10.16.16",
-		"i18next": "^23.7.6",
-		"i18next-browser-languagedetector": "^7.2.0",
-		"i18next-http-backend": "^2.4.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^13.5.0",
-		"react-redux": "^8.1.3",
-		"react-toastify": "^9.1.1",
-		"redux": "^4.2.1",
-		"redux-thunk": "^2.4.2",
-		"sound-shaper-addon": "file:./../sound-shaper-addon",
-		"translation-check": "^1.1.0",
-		"usehooks-ts": "^2.9.1",
-		"wavesurfer.js": "^7.4.12"
-	},
-	"homepage": "./",
-	"main": "public/electron.js",
-	"scripts": {
-		"dev": "concurrently \"yarn react:dev\" \"yarn electron:wait\"",
-		"electron:wait": "wait-on tcp:3000 && yarn electron:dev",
-		"prebuild": "rimraf build && rimraf dist",
-		"react:build": "react-scripts build",
-		"react:dev": "cross-env BROWSER=none react-scripts start",
-		"electron:build": "electron-builder build --win --publish never",
-		"electron:deploy": "electron-builder build --win --publish always",
-		"electron:dev": "electron .",
-		"build": "yarn react:build && yarn electron:build",
-		"deploy": "yarn react:build && yarn electron:deploy",
-		"format": "prettier --write .",
-		"update": "taze latest -w",
-		"extract-translations": "i18next -c i18next-parser.config.js",
-		"install_addon": "yarn add file:./../sound-shaper-addon --force"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "sound-shaper",
+  "version": "1.0.1",
+  "private": true,
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^8.0.1",
+    "cross-env": "^7.0.3",
+    "electron": "^22.0.0",
+    "electron-builder": "^23.6.0",
+    "i18next-parser": "^8.9.0",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "react-scripts": "^5.0.1",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "3.2.4",
+    "taze": "^0.8.4",
+    "typescript": "^4.9.3",
+    "wait-on": "^6.0.1"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "auto-launch": "^5.0.5",
+    "electron-is-dev": "^2.0.0",
+    "electron-reloader": "^1.2.3",
+    "electron-updater": "^5.3.0",
+    "framer-motion": "^10.16.16",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "sound-shaper-addon": "file:./../sound-shaper-addon",
+    "usehooks-ts": "^2.9.1",
+    "wavesurfer.js": "^7.4.12"
+  },
+  "homepage": "./",
+  "main": "public/electron.js",
+  "scripts": {
+    "dev": "concurrently \"yarn react:dev\" \"yarn electron:wait\"",
+    "electron:wait": "wait-on tcp:3000 && yarn electron:dev",
+    "prebuild": "rimraf build && rimraf dist",
+    "react:build": "react-scripts build",
+    "react:dev": "cross-env BROWSER=none react-scripts start",
+    "electron:build": "electron-builder build --win --publish never",
+    "electron:deploy": "electron-builder build --win --publish always",
+    "electron:dev": "electron .",
+    "build": "yarn react:build && yarn electron:build",
+    "deploy": "yarn react:build && yarn electron:deploy",
+    "format": "prettier --write .",
+    "update": "taze latest -w",
+    "extract-translations": "i18next -c i18next-parser.config.js",
+    "install_addon": "yarn add file:./../sound-shaper-addon --force"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "build": {
+    "appId": "com.geneirodan.sound-shaper",
+    "win": {
+      "icon": "favicon.ico"
+    },
+    "directories": {
+      "buildResources": "public"
+    }
+  }
 }
